--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -14,6 +14,7 @@
     background-color: $--white;
     border-bottom: 1px solid $--very-light-pink;
     box-sizing: border-box;
+    z-index: 90;
 }
 .Navbar__menu {
     display: none;
