--- a/src/styles/PrimaryButton.module.scss
+++ b/src/styles/PrimaryButton.module.scss
@@ -1,15 +1,15 @@
-@use "vars";
+@import 'vars';
 
 .PrimaryButton {
     width: 100%;
     height: 50px;
     margin-top: 14px;
     margin-bottom: 30px;
-    font-size: var(--md);
+    font-size: $--md;
     font-weight: bold;
-    background-color: var(--hospital-green);
+    background-color: $--hospital-green;
     border-radius: 8px;
     border: none;
-    color: var(--white);
+    color: $--white;
     cursor: pointer;
 }
