--- a/src/styles/PrimaryButton.module.scss
+++ b/src/styles/PrimaryButton.module.scss
@@ -1,6 +1,8 @@
 @import 'vars';
 
 .PrimaryButton {
+    display: grid;
+    place-content: center;
     width: 100%;
     height: 50px;
     margin-top: 14px;
@@ -12,4 +14,10 @@
     border: none;
     color: $--white;
     cursor: pointer;
+
+    a {
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
 }
