--- a/src/styles/ShoppingCart.module.scss
+++ b/src/styles/ShoppingCart.module.scss
@@ -15,6 +15,7 @@
 .ShoppingCart__title {
     display: flex;
     align-items: center;
+    margin-bottom: 16px;
     h1 {
         margin: 0;
     }
