--- a/src/styles/PrimaryButton.module.scss
+++ b/src/styles/PrimaryButton.module.scss
@@ -1,10 +1,11 @@
 @import 'vars';
 
 .PrimaryButton {
-    display: grid;
-    place-content: center;
+    display: flex;
     width: 100%;
     height: 50px;
+    justify-content: center;
+    align-items: center;
     margin-top: 14px;
     margin-bottom: 30px;
     font-size: $--md;
@@ -19,5 +20,7 @@
         display: block;
         width: 100%;
         height: 100%;
+        padding-top: 12px;
+        text-align: center;
     }
 }
